# DTGN

./: .gitattributes  .gitignore  README.md  arg_parser.py  main.py  pathway_identify.py  preprocessing.py  pyproject.toml  run_HCV.sh  run_LR.sh  run_MI.sh  setup.py  test.py  train.py
data/: Supplemeantary-Table1.xlsx  Supplementary Table1.xlsx
data/HCV/: exp.csv  mapping.csv  network.csv  training_net.csv  training_node.csv
data/HCV/raw_data/: network-high.csv
data/HCV/valid_data/: positive_tfs.csv
data/IPSC/: exp.csv  exp_7.csv  mapping.csv  network.csv
data/LP/: training_node.csv
data/LR/: exp.csv  network.csv  origin_net.csv
data/LR/raw_data/: mapping.csv
data/MI/: exp.csv  network.csv
evaluation/: __init__.py  negative_pathways_generator.py  negative_tfs_generator.py  pathway_identify.py  pathways_roc.py  tfs_roc.py
factor_net/: __init__.py  factor_grn.py  permutation_test.py
history_code/: __init__.py  main.py  preprocessing_bak.py  train_bak.py
history_code/factor_net/: factor_grn_bak.py  permutation_test_bak.py
history_code/model/: PygGCN.py
history_code/utils_bak/: create_negative_pathways.py  create_negative_tfs.py  draw_roc.py  file_operation.py  graph_operation.py  loss_curve.py
model/: MyGAE.py  PygGCN.py
pathway_analysis/: TGMI.py
preprocess/: preprocessing.py
src/dtgn/: __init__.py  train.py
ssn_test/: __init__.py  simulte_ssn.py
utils/: TGMI.py  __init__.py  create_negative_pathways.py  create_negative_tfs.py  draw_pcc_hist.py  draw_roc.py  file_operation.py  graph_operation.py  loss_curve.py  one_hot_encode.py
(+43 files in other folders)
