# @Author : CyIce
# @Time : 2024/9/10 14:46
# 用于定义项目的构建系统配置。
[build-system]
# 指定构建系统工具的要求。使用 "hatchling" 作为构建系统工具。
requires = ["hatchling"]
# 指定构建系统的后端实现。
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/dtgn"]


# 项目相关的各种信息。
[project]
# 项目的名称。
name = "dtgn"
# 项目的版本号。
version = "1.0.0"
# 作者信息列表，包含作者的姓名和电子邮件。
authors = [
    {name = "xiaozhiqiang", email = "220220943211@lzu.edu.cn"},
]
# 项目的描述。
description = "DTGN"
# 项目的 README 文件的名称。
readme = "README.md"
# 许可证信息，包含许可证文件的名称。
license = {file = "LICENSE"}
# 项目所需的 Python 版本。
requires-python = ">=3.6"
# 项目的分类器，用于指定项目的分类标签。例如编程语言、许可证、操作系统等。
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
# 项目的依赖列表，指定其他项目或库的依赖关系。
dependencies = [
    "torch>=1.13",
    "numpy>=1.23",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "pandas>=2.0",
    "tqdm>=4.64",
    "matplotlib>=3.7",
    "networkx>=3.0",
]

# 项目的相关网址
[project.urls]
# 项目的主页网址。
"Homepage" = "https://github.com/glabatlas/DTGN"